fix word wrap and add text to jumbotron

--- a/Park.ly/client/css/main.css
+++ b/Park.ly/client/css/main.css
@@ -202,7 +202,7 @@ button{
 }
 
 .jumbo-text {
-  word-break: break-all;
+  /*word-break: break-all;*/
   word-wrap: break-word;
   text-shadow: none;
 }
